--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,3 +1,7 @@
+.background {
+    background-color: #fffde7;
+    height: 100vh;
+}
 .div {
     display: flex;
     flex-direction: column;
@@ -17,20 +21,22 @@
     align-items: center;
     flex-direction: row;
     color: blue;
-    padding: 30px;
+    padding: 0rem;
     word-wrap: break-word;
     width: 90%;
     border: 1px solid #000000;
-    border-width: 2px;
+    border-width: 0.2rem;
     margin: auto;
 }
 .eventDetails {
-    margin: 1%;
+    margin: 3.5%;
+    /* padding: 3.32%; */
+    /* border: 1px solid #000000;
+    border-width: 2px; */
 }
 .img {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 46%;
     height: auto;
-    margin: 1%;
 }
