--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,72 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: red;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+h1 {
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 300;
+    font-size: 6rem;
+    line-height: 1.167;
+    letter-spacing: -0.01562em;
+}
+
+h2 {
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 300;
+    font-size: 3rem;
+    line-height: 1.2;
+    letter-spacing: -0.00833em;
+}
+h3 {
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 400;
+    font-size: 3rem;
+    line-height: 1.167;
+    letter-spacing: 0em;
+}
+h4 {
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 400;
+    font-size: 2.5rem;
+    line-height: 1.1;
+    letter-spacing: -0.02em;
+}
+h5 {
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-size: 1.2rem;
+    line-height: 1.2;
+    font-weight: bold;
+    letter-spacing: -0.00833em;
+    color: #006;
+}
+h6 {
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-size: 1.2rem;
+    line-height: 1.2;
+    font-weight: bold;
+    letter-spacing: 0.06em;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+}
+p1 {
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-size: 4rem;
+    line-height: 1.2;
+    font-weight: bold;
+    letter-spacing: 0.06em;
+    color: #006;
+    /* textShadow: 1px 1px 1px black; */
 }
