--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -12,7 +12,7 @@
     align-items: center;
 }
 
-.links {
+.linksContainer {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -22,4 +22,15 @@
     width: 5rem;
     height: 2rem;
     position: relative;
+}
+
+.link {
+    color: white;
+    margin: 5rem;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-decoration: none;
+    letter-spacing: 0.05em;
+    font-family: Helvetica, Arial, sans-serif;
+    text-shadow: 1px 1px 1px black;
 }
