--- a/components/EventCard/EventCard.module.css
+++ b/components/EventCard/EventCard.module.css
@@ -3,7 +3,9 @@
 .title {
     font-family: 'Yusei Magic', sans-serif;
     font-weight: 400;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     line-height: 1.1;
     letter-spacing: -0.02em;
+    margin: 0;
+    padding: 1.1vw 0.5vw 1vw 0.5vw;
 }
