--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -32,7 +32,7 @@
     text-decoration: none;
     letter-spacing: 0.05em;
     font-family: Helvetica, Arial, sans-serif;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 1px 1px 2px rgb(77, 77, 77);
 }
 .box {
     position: fixed;
