small edits to nav bar

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -7,11 +7,6 @@
     padding: 0.2rem;
 }
 
-/*icons{
-    //     // display: flex;
-    //     // align-items: center;
-    //     background-color: white;,
-    //     border-radius: 90%;
-    //     padding: 0.2rem;
-    // }
-    */
+.icons:hover {
+    text-decoration: underline;
+}
