changes to index.js

--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -27,23 +27,27 @@
 .link {
     color: white;
     margin: 2.5rem;
-    font-weight: bold;
+    font-weight: 400;
     font-size: 1.2rem;
     text-decoration: none;
     letter-spacing: 0.08em;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Roboto, Helvetica, Arial, sans-serif;
     text-shadow: 1px 1.25px 1px black;
+
+    /* fontWeight: 300,
+            fontSize: '6rem',
+            lineHeight: 1.167,
+            letterSpacing: '-0.01562em' */
 }
 .link:hover {
-    color: white;
+    color: #004a9f;
     margin: 2.5rem;
     font-weight: bolder;
     font-size: 1.2rem;
-    text-decoration: underline;
     text-decoration-color: white;
     letter-spacing: 0.08em;
-    font-family: Helvetica, Arial, sans-serif;
-    text-shadow: 1px 1.25px 1px black;
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    text-shadow: 3px 3px 13px darkslategrey;
 }
 
 .box {
