--- a/components/EventCard/EventCard.module.css
+++ b/components/EventCard/EventCard.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
 
 .title {
-    font-family: 'Yusei Magic', sans-serif;
-    font-weight: 400;
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 300;
     font-size: 2.5rem;
     line-height: 1.1;
     letter-spacing: -0.02em;
