--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,7 +43,7 @@
 .title a:hover,
 .title a:focus,
 .title a:active {
-    /* text-decoration: underline; */
+    text-decoration: underline;
 }
 
 .title {
