--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -9,8 +9,23 @@
     align-items: center;
     margin-top: 1.75rem;
     text-align: justify;
-    width: 80%;
-    margin: auto;
+    width: 100%;
+    /* margin: auto; */
+    position: relative;
+    z-index: 1;
+    /* ADDS INDENTATION EFFECT */
+    box-shadow: 0px 10px 5px -5px rgb(139, 139, 139),
+        0px -10px 5px -5px rgb(139, 139, 139);
+    background: linear-gradient(
+        180deg,
+        #ffffff,
+        #ffffff,
+        #ffffff,
+        #ffffff,
+        #ffffff
+    );
+    border-top: 0.15rem solid #318855;
+    border-bottom: 0.15rem solid #318855;
 }
 .intro {
     display: flex;
@@ -31,7 +46,7 @@
     display: flex;
     flex-direction: column;
     /* background-color: blue; */
-    padding: 0rem 4rem 0rem 4rem;
+    padding: 2rem 4rem 4rem 4rem;
     width: 50%;
     border-width: 0.2rem;
     /* margin: auto; */
@@ -43,6 +58,7 @@
 .imageContainer {
     width: 50%;
     overflow: hidden;
+    margin-right: 5%;
 }
 .eventDetails {
     /* margin: 3.5%; */
@@ -69,12 +85,14 @@
 .container {
     display: flex;
     height: 30rem;
+    margin-left: 5%;
 }
 
-.text {
-    font-size: 2em;
+.heading {
+    font-size: 4vw;
     font-family: sans-serif;
     line-height: 1.2;
+    padding: 3.5rem;
 }
 
 .animation {
