--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -1,9 +1,14 @@
 .button {
-    background-color: #62a3ff;
+    background-color: #318855;
+    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
     /* variant: outlined; */
     padding: 0.5rem;
     margin: 0rem;
     box-shadow: 0.1rem 0.01rem 0.1rem 0.01rem grey;
     color: #fff;
-    /* hover:  backgroundcolor: #009faf; */
+    border-radius: 5px;
+    border: none;
+}
+.button:hover {
+    background-color: #006a3f;
 }
