--- a/components/EventDisplay/EventDisplay.module.css
+++ b/components/EventDisplay/EventDisplay.module.css
@@ -1,16 +1,62 @@
+/* .background {
+    background: linear-gradient(0deg, #757f9a, #d7dde8);
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 66vh;
+} */
+.mainContainer {
+    width: 65rem;
+    margin: 3rem auto 5rem auto;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    box-shadow: 0rem 0rem 1rem 0.05px rgb(216, 216, 216);
+}
 .card {
     display: flex;
+    width: 100%;
 }
 .image {
     background-size: cover;
-    width: 100%;
+    width: 66%;
     height: 100%;
+    border-top-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    overflow: hidden;
+}
+.titleContainer {
+    width: 34%;
+    padding: 1rem 3rem 3rem 3rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.date {
+    height: 2rem;
+    border-bottom: thin solid darkgray;
+}
+.title {
+    font-size: 2rem;
 }
 .actionsBar {
     display: flex;
     justify-content: space-between;
-    width: 80%;
+    padding: 0.8rem 1rem 0.8rem 18rem;
+    width: 100%;
+    border-top: thin solid darkgray;
+    border-bottom: thin solid darkgray;
 }
 .details {
     display: flex;
+    width: 100%;
+}
+.description {
+    width: 66%;
+    padding: 3rem;
+}
+.additionalInfo {
+    width: 34%;
+    padding: 3rem;
 }
