--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -14,18 +14,7 @@
     position: relative;
     z-index: 1;
     /* ADDS INDENTATION EFFECT */
-    box-shadow: 0px 10px 5px -5px rgb(139, 139, 139),
-        0px -10px 5px -5px rgb(139, 139, 139);
-    background: linear-gradient(
-        180deg,
-        #ffffff,
-        #ffffff,
-        #ffffff,
-        #ffffff,
-        #ffffff
-    );
-    border-top: 0.15rem solid #318855;
-    border-bottom: 0.15rem solid #318855;
+    background-color: #fafafa;
 }
 .intro {
     display: flex;
@@ -42,7 +31,7 @@
     text-overflow: clip;
     /* margin: 0.1rem; */
 }
-.event {
+.eventContainer {
     display: flex;
     flex-direction: column;
     /* background-color: blue; */
@@ -53,12 +42,21 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    /* height: 100%; */
+    height: 100%;
 }
 .imageContainer {
-    width: 50%;
     overflow: hidden;
-    margin-right: 5%;
+    margin-left: 2%;
+    display: flex;
+    /* margin-right: 2%; */
+    width: 90%;
+    height: 100%;
+}
+.root {
+    max-width: '40%';
+}
+.media {
+    height: 300;
 }
 .eventDetails {
     /* margin: 3.5%; */
@@ -77,23 +75,28 @@
     /* width: auto; */
     /* max-height: 30rem; */
     /* max-width: inherit; */
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 60px -10px;
 }
 .countdown {
+    margin-top: 10px;
+    margin-right: 2px;
     font-size: 2rem;
-    padding: 1.5rem;
+    /* padding: 1.5rem; */
+    padding-left: 3%;
 }
 
 .container {
     display: flex;
     height: 30rem;
-    margin-left: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
 
 .heading {
     font-size: 4vw;
     font-family: sans-serif;
     line-height: 1.2;
-    padding: 3.5rem;
+    padding: 3rem;
 }
 
 .animation {
@@ -153,4 +156,40 @@
     100% {
         transform: translateY(-400%);
     }
+}
+.textWithBlurredBg {
+    width: 100%;
+    height: auto;
+    display: inline-block;
+    position: relative;
+    transition: 0.3s;
+    margin: 4px;
+}
+
+.textWithBlurredBg img {
+    width: 100%;
+    height: 100%;
+    transition: 0.3s;
+    border-radius: 4px;
+}
+
+.textWithBlurredBg:hover img {
+    filter: blur(0.5px) brightness(60%);
+    box-shadow: 0 0 10px darkgrey;
+}
+
+.textWithBlurredBg :not(img) {
+    position: absolute;
+    z-index: 1;
+    top: 40%;
+    width: 100%;
+    text-align: center;
+    color: white;
+    opacity: 0;
+    transition: 0.3s;
+    font-size: 2.5rem;
+}
+
+.textWithBlurredBg:hover :not(img) {
+    opacity: 1;
 }
