--- a/components/EventDisplay/EventDisplay.module.css
+++ b/components/EventDisplay/EventDisplay.module.css
@@ -1,28 +1,37 @@
-/* .background {
+.background {
     background: linear-gradient(0deg, #757f9a, #d7dde8);
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     width: 100%;
-    height: 66vh;
-} */
+    height: 50vh;
+}
 .mainContainer {
+    background-color: #fafafa;
     width: 65rem;
     margin: 3rem auto 5rem auto;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
-    box-shadow: 0rem 0rem 1rem 0.05px rgb(216, 216, 216);
+    z-index: 50;
+    position: relative;
+    box-shadow: 0rem 0rem 1rem 0.05px rgb(160, 160, 160);
 }
 .card {
     display: flex;
     width: 100%;
+    min-height: 22rem;
 }
-.image {
+.imageContainer {
+    background-size: cover;
     width: 66%;
     height: 100%;
+    min-height: 22rem;
     border-top-left-radius: 5px;
     border-bottom-right-radius: 5px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .titleContainer {
     width: 34%;
@@ -42,7 +51,7 @@
 .actionsBar {
     display: flex;
     justify-content: space-between;
-    padding: 0.8rem 1rem 0.8rem 17rem;
+    padding: 0.8rem 1rem 0.8rem 16.5rem;
     width: 100%;
     border-top: thin solid darkgray;
     border-bottom: thin solid darkgray;
