Trying to replicate Alex's design

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,31 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;600&family=Nanum+Pen+Script&family=Ovo&display=swap');
 .background {
-    background-color: #fafafa;
+    background: #f2faf6 0% 0% no-repeat padding-box;
+    opacity: 1;
     height: 100vh;
     /* padding-top: 50px; */
 }
+.contrastBackground {
+    background: #0a1045 0% 0% no-repeat padding-box;
+    border: 1px solid #707070;
+    opacity: 1;
+    max-height: 66vh;
+}
 .div {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-top: 1.75rem;
+    margin: auto;
     text-align: justify;
-    width: 100%;
-    /* margin: auto; */
+    width: 75%;
     position: relative;
-    z-index: 1;
-    /* ADDS INDENTATION EFFECT */
-    box-shadow: 0px 10px 5px -5px rgb(139, 139, 139),
-        0px -10px 5px -5px rgb(139, 139, 139);
-    background: linear-gradient(
-        180deg,
-        #ffffff,
-        #ffffff,
-        #ffffff,
-        #ffffff,
-        #ffffff
-    );
-    border-top: 0.15rem solid #318855;
-    border-bottom: 0.15rem solid #318855;
+    /* top: 1vh; */
+    opacity: 1;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px #00000014;
+    height: 42vh;
+    background-color: white;
 }
 .intro {
     display: flex;
@@ -34,59 +32,50 @@
     align-items: center;
 }
 .description {
-    font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
-    font-size: 1.2rem;
+    font-family: 'Mulish', 'Helvetica', 'Arial', 'sans-serif';
+    font-size: 1rem;
     line-height: 1;
     letter-spacing: 0em;
     color: #006;
     text-overflow: clip;
-    /* margin: 0.1rem; */
+    margin: 0;
+}
+.date {
+    font-family: 'Mulish';
+    letter-spacing: 0em;
 }
 .event {
     display: flex;
     flex-direction: column;
-    /* background-color: blue; */
-    padding: 2rem 4rem 4rem 4rem;
+    padding: 1.5rem;
+    height: 100%;
     width: 50%;
     border-width: 0.2rem;
-    /* margin: auto; */
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: left;
     position: relative;
-    /* height: 100%; */
 }
 .imageContainer {
-    width: 50%;
+    height: 100%;
     overflow: hidden;
-    margin-right: 5%;
-}
-.eventDetails {
-    /* margin: 3.5%; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 80%;
-    z-index: 1;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
 }
 .img {
     display: flex;
     flex-direction: column;
     width: 100%;
-    /* height: 25rem; */
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
     /* width: auto; */
     /* max-height: 30rem; */
     /* max-width: inherit; */
 }
 .countdown {
     font-size: 2rem;
-    padding: 1.5rem;
-}
-
-.container {
-    display: flex;
-    height: 30rem;
-    margin-left: 5%;
+    /* padding: 1rem; */
+    width: 14rem;
 }
 
 .heading {
@@ -94,17 +83,19 @@
     font-family: sans-serif;
     line-height: 1.2;
     padding: 3.5rem;
+    color: white;
+    position: relative;
 }
-
 .animation {
     display: inline-block;
     vertical-align: top;
     text-align: center;
     border: 1px solid;
-    overflow: visible;
+    overflow: hidden;
     white-space: nowrap;
-    color: #fafafa;
+    color: #0a1045;
     position: relative;
+    font-size: 2rem;
 }
 
 .animation ul {
@@ -120,7 +111,7 @@
 }
 
 .animation ul.mask {
-    color: black;
+    color: white;
     overflow: hidden;
     position: absolute;
     top: 0;
