--- a/components/Countdown2/Countdown.module.css
+++ b/components/Countdown2/Countdown.module.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Droid+Sans+Mono');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 .flipClock {
     display: flex;
     justify-content: space-between;
-    width: 21rem;
+    width: 12.5rem;
     flex-wrap: wrap;
 }
 .time {
@@ -11,19 +12,21 @@
     /* flex-wrap: ; */
     color: black;
     align-content: space-around;
-    justify-content: space-evenly;
-    width: 21rem;
+    justify-content: space-between;
+    width: 13.25rem;
     /* padding: 1rem; */
 }
 .separator {
     display: flex;
     align-items: center;
+    font-size: 1rem;
+    color: #efefef;
 }
 .timetext {
     text-align: center;
     display: flex;
     align-content: space-between;
-    font-size: 1rem;
+    font-size: 0.7rem;
 }
 .timeType {
     padding: 0;
@@ -36,11 +39,11 @@
 .flipUnitContainer {
     display: block;
     position: relative;
-    width: 5rem;
-    height: 4rem;
+    width: 2.5rem;
+    height: 2.5rem;
     perspective-origin: 50% 50%;
     perspective: 300px;
-    background-color: #3d78bb;
+    background-color: #efefef;
     border-radius: 3px;
     box-shadow: 0px 10px 10px -10px grey;
 }
@@ -53,19 +56,19 @@
     width: 100%;
     height: 50%;
     overflow: hidden;
-    border: 1px solid whitesmoke;
+    /* border: 1px solid whitesmoke; */
 }
 .upperCard span,
 .lowerCard span {
-    font-size: 1.5em;
-    font-family: 'Droid Sans Mono', monospace;
-    font-weight: lighter;
-    color: white;
+    font-size: 0.5em;
+    font-family: 'Poppins', monospace;
+    font-weight: bolder;
+    color: black;
 }
 
 .upperCard {
     align-items: flex-end;
-    border-bottom: 0.5px solid whitesmoke;
+    /* border-bottom: 0.5px solid whitesmoke; */
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
 }
@@ -75,7 +78,7 @@
 
 .lowerCard {
     align-items: flex-start;
-    border-top: 0.5px solid whitesmoke;
+    /* border-top: 0.5px solid whitesmoke; */
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
 }
@@ -95,17 +98,17 @@
     backface-visibility: hidden;
 }
 .flipCard span {
-    font-family: 'Droid Sans Mono', monospace;
-    font-size: 1.5em;
-    font-weight: lighter;
-    color: white;
+    font-family: 'Poppins', monospace;
+    font-size: 0.5em;
+    font-weight: bolder;
+    color: black;
 }
 .flipCard.unfold {
     top: 50%;
     align-items: flex-start;
     transform-origin: 50% 0%;
     transform: rotateX(180deg);
-    background-color: #3d78bb;
+    background-color: #efefef;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     border: 0.5px solid whitesmoke;
@@ -119,7 +122,7 @@
     align-items: flex-end;
     transform-origin: 50% 100%;
     transform: rotateX(0deg);
-    background-color: #71a3dd;
+    background-color: #f2f2f2;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
     border: 0.5px solid whitesmoke;
