--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -10,6 +10,7 @@
     border: 1px solid #707070;
     opacity: 1;
     max-height: 66vh;
+    height: 66vh;
 }
 .div {
     display: flex;
@@ -17,8 +18,10 @@
     margin: auto;
     text-align: justify;
     width: 75%;
-    position: relative;
-    /* top: 1vh; */
+    position: absolute;
+    top: 60vh;
+    left: 0;
+    right: 0;
     opacity: 1;
     border-radius: 8px;
     box-shadow: 0px 2px 4px #00000014;
@@ -78,6 +81,11 @@
     width: 14rem;
 }
 
+.eventsList {
+    margin-top: 20rem;
+    background-color: #f2faf6;
+}
+
 .heading {
     font-size: 4vw;
     font-family: sans-serif;
@@ -96,6 +104,7 @@
     color: #0a1045;
     position: relative;
     font-size: 2rem;
+    margin: 3rem;
 }
 
 .animation ul {
