Home page styling done (need world SVG); NavBar to-do

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -1,5 +1,5 @@
 .button {
-    background-color: #318855;
+    background-color: #0b5351;
     font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
     /* variant: outlined; */
     padding: 0.5rem;
