--- a/components/EventDisplay/EventDisplay.module.css
+++ b/components/EventDisplay/EventDisplay.module.css
@@ -14,6 +14,8 @@
     border-radius: 5px;
     z-index: 50;
     position: relative;
+    left: 0;
+    right: 0;
     box-shadow: 0rem 0rem 1rem 0.05px rgb(160, 160, 160);
 }
 .card {
