--- a/styles/events.module.css
+++ b/styles/events.module.css
@@ -1,6 +1,8 @@
 .title {
-    box-shadow: 0px 2px 5px -5px rgb(54, 54, 54);
+    box-shadow: 0px 2px 10px -10px rgb(54, 54, 54);
     padding-bottom: 2rem;
+    width: 75%;
+    margin: auto;
 }
 .search {
     padding: 1rem;
