--- a/components/EventForm/EventForm.module.css
+++ b/components/EventForm/EventForm.module.css
@@ -6,12 +6,18 @@
     height: 66vh;
 } */
 .mainContainer {
+    background-color: #ffffff;
     width: 65rem;
     margin: 3rem auto 5rem auto;
     display: flex;
     flex-direction: column;
-    border-radius: 5px;
-    box-shadow: 0rem 0rem 1rem 0.05px rgb(216, 216, 216);
+    border-radius: 8px;
+    z-index: 50;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: -25vh;
+    box-shadow: 0px 2px 4px #00000014;
 }
 .card {
     display: flex;
@@ -32,7 +38,7 @@
 }
 .titleContainer {
     width: 34%;
-    padding: 1rem 3rem 3rem 3rem;
+    padding: 1rem 2.4rem 3rem 2.4rem;
     font-size: 1rem;
     display: flex;
     flex-direction: column;
