--- a/styles/create-event.module.css
+++ b/styles/create-event.module.css
@@ -1,3 +1,10 @@
+.contrastBackground {
+    position: relative;
+    height: 40vh;
+    background: #0a1045;
+    opacity: 1;
+    z-index: -50;
+}
 .form {
     margin: '2rem';
     display: flex;
