--- a/styles/events.module.css
+++ b/styles/events.module.css
@@ -1,3 +1,10 @@
+.contrastBackground {
+    position: relative;
+    height: 40vh;
+    background: #0a1045;
+    opacity: 1;
+    z-index: -50;
+}
 .title {
     box-shadow: 0px 2px 10px -10px rgb(54, 54, 54);
     padding-bottom: 2rem;
