--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -12,7 +12,7 @@
     max-height: 66vh;
     height: 66vh;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
 }
 .div {
@@ -22,7 +22,7 @@
     text-align: justify;
     width: 75%;
     position: absolute;
-    top: 55vh;
+    top: 56.5vh;
     left: 0;
     right: 0;
     opacity: 1;
@@ -36,6 +36,10 @@
     flex-direction: column;
     padding: 2rem;
     align-items: center;
+}
+.rocket {
+    width: 7.5rem;
+    height: 7.5rem;
 }
 .description {
     font-family: 'Mulish', 'Helvetica', 'Arial', 'sans-serif';
@@ -97,7 +101,133 @@
     color: white;
     position: relative;
 }
-.animation {
+
+#develop {
+    font-family: 'Dancing Script';
+}
+#learn {
+    font-family: 'Marck Script';
+}
+#grow {
+    font-family: 'Nothing You Could Do';
+}
+
+.slidingVertical {
+    display: flex;
+    justify-content: center;
+    text-indent: 8px;
+    padding-top: 3rem;
+    font-size: 3rem;
+}
+.slidingVertical span {
+    animation: topToBottom 6s linear infinite 0s;
+    -ms-animation: topToBottom 6s linear infinite 0s;
+    -webkit-animation: topToBottom 6s linear infinite 0s;
+    color: #ffc15e;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+}
+.slidingVertical span:nth-child(2) {
+    animation-delay: 2s;
+    -ms-animation-delay: 2s;
+    -webkit-animation-delay: 2s;
+}
+.slidingVertical span:nth-child(3) {
+    animation-delay: 4s;
+    -ms-animation-delay: 4s;
+    -webkit-animation-delay: 4s;
+}
+.slidingVertical span:nth-child(4) {
+    animation-delay: 6s;
+    -ms-animation-delay: 6s;
+    -webkit-animation-delay: 6s;
+}
+
+/*topToBottom Animation*/
+@-moz-keyframes topToBottom {
+    0% {
+        opacity: 0;
+    }
+    5% {
+        opacity: 0;
+        -moz-transform: translateY(-25px);
+    }
+    10% {
+        opacity: 1;
+        -moz-transform: translateY(0px);
+    }
+    25% {
+        opacity: 1;
+        -moz-transform: translateY(0px);
+    }
+    30% {
+        opacity: 0;
+        -moz-transform: translateY(25px);
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@-webkit-keyframes topToBottom {
+    0% {
+        opacity: 0;
+    }
+    5% {
+        opacity: 0;
+        -webkit-transform: translateY(-25px);
+    }
+    10% {
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+    }
+    25% {
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+    }
+    30% {
+        opacity: 0;
+        -webkit-transform: translateY(25px);
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@-ms-keyframes topToBottom {
+    0% {
+        opacity: 0;
+    }
+    5% {
+        opacity: 0;
+        -ms-transform: translateY(-25px);
+    }
+    10% {
+        opacity: 1;
+        -ms-transform: translateY(0px);
+    }
+    25% {
+        opacity: 1;
+        -ms-transform: translateY(0px);
+    }
+    30% {
+        opacity: 0;
+        -ms-transform: translateY(25px);
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+/* .animation {
     display: inline-block;
     vertical-align: top;
     text-align: center;
@@ -109,19 +239,16 @@
     font-size: 2rem;
     margin: 3rem;
 }
-
 .animation ul {
     list-style: none;
     padding: 0 0.5ex;
     margin: 0;
     height: 1.2em;
 }
-
 .animation li {
     position: relative;
     animation: cycle-5-items 5s ease-in-out alternate infinite;
 }
-
 .animation ul.mask {
     color: white;
     overflow: hidden;
@@ -156,4 +283,4 @@
     100% {
         transform: translateY(-400%);
     }
-}
+} */
