--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -2,15 +2,16 @@
 .button {
     background-color: #0b5351;
     font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
+    font-weight: 600;
     /* variant: outlined; */
     padding: 0.5rem;
     margin: 0rem;
-    box-shadow: 0.1rem 0.01rem 0.1rem 0.01rem grey;
+    box-shadow: 0px 1px 4px #0000000a;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 3px;
     border: none;
 }
 .button:hover {
-    background-color: #006a3f;
+    background-color: #0a4745;
     cursor: pointer;
 }
