--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -1,5 +1,24 @@
 .logo {
-    height: 4rem;
+    height: 100%;
+    /* position: relative; */
+    max-height: 4rem;
+}
+.searchContainer {
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+.searchBar {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 4rem;
+    /* padding-left: 1rem; */
+    border-radius: 3px;
+    background-color: #3d9d62;
+    height: '2.5rem';
+    width: 100%;
+    color: #ededed;
 }
 
 .profileLogin {
@@ -8,10 +27,14 @@
     align-items: center;
 }
 
-.linksContainer {
+.login {
+    width: 3.5rem;
+}
+.buttonsContainer {
     display: flex;
-    flex-direction: row;
     align-items: center;
+    width: 20rem;
+    justify-content: space-between;
 }
 
 .image {
@@ -21,31 +44,14 @@
 }
 
 .link {
-    color: white;
-    margin: 2.5rem 0.5rem 2.5rem 0.5rem;
-    font-weight: 400;
-    font-size: 1rem;
+    height: 100%;
+    max-height: 4rem;
+    display: flex;
+    justify-content: center;
     text-decoration: none;
-    /* letter-spacing: 0.08em; */
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    padding: 0.3rem 2rem 0.3rem 2rem;
-    /* text-shadow: 1px 1.25px 1px black; */
-
-    /* fontWeight: 300,
-            fontSize: '6rem',
-            lineHeight: 1.167,
-            letterSpacing: '-0.01562em' */
 }
-.link:hover {
-    margin: 2.5rem 0.5rem 2.5rem 0.5rem;
-    font-weight: bolder;
-    text-decoration-color: white;
-    /* letter-spacing: 0.08em; */
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    /* text-shadow: 3px 3px 13px darkslategrey; */
-    background-color: #227243;
-    border-radius: 10px;
-    padding: 0.3rem 2rem 0.3rem 2rem;
+.link:active {
+    text-decoration: none;
 }
 
 .box {
@@ -57,8 +63,3 @@
     padding: 3rem;
     width: 100%;
 }
-
-/* .container {
-    width: 80%;
-    margin: auto;
-} */
