--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Mulish:wght@400;600;700&family=Nanum+Pen+Script&family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Marck+Script&family=Nothing+You+Could+Do&display=swap');
 html,
 body {
     padding: 0;
